# github-issue-helper

./: .gitignore  LICENSE  README.md  __init__.py  install.bat  install.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
examples/: v1.1_with_projects.csv
scripts/: check_installation.py
src/: csv_parser.py  github_client.py  main.py  projects_client.py
tests/: csv_parser_tests.py  test_github_client.py
